--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     "description": "Premium fresh juice shop in Trichy with superfood bowls, smoothies, and healthy drinks.",
     "image": "/images/logo.png",
     "url": "https://fruithousentrichy.com",
-    "telephone": "+91XXXXXXXXXX",
+    "telephone": "+917598465053",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Trichy",
@@ -73,7 +73,7 @@
 
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
-    <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -94,7 +94,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
@@ -131,7 +131,7 @@
                         <span class="card-icon">📞</span>
                         <div>
                             <h4>Phone</h4>
-                            <a href="tel:+91XXXXXXXXXX">+91 XXXXXXXXXX</a>
+                            <a href="tel:+917598465053">+91 XXXXXXXXXX</a>
                         </div>
                     </div>
 
@@ -139,7 +139,7 @@
                         <span class="card-icon">💬</span>
                         <div>
                             <h4>WhatsApp</h4>
-                            <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!" target="_blank"
+                            <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!" target="_blank"
                                 rel="noopener">Message us on WhatsApp</a>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
             <h2 class="reveal">Ready to Order?</h2>
             <p class="reveal" style="margin: var(--space-md) auto var(--space-xl);">Skip the queue! Order your favorite
                 juices and bowls directly on WhatsApp.</p>
-            <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+            <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
                 target="_blank" class="btn btn-whatsapp reveal" style="font-size: 1.05rem; padding: 16px 40px;">
                 💬 Order on WhatsApp
             </a>
@@ -214,8 +214,8 @@
                     <h4>Contact Us</h4>
                     <div class="footer-links">
                         <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+91XXXXXXXXXX">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/91XXXXXXXXXX" target="_blank">💬 WhatsApp</a>
+                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
                         <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
