--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
     <!-- Floating WhatsApp -->
-    <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -114,7 +114,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
@@ -668,8 +668,8 @@
                     <h4>Contact Us</h4>
                     <div class="footer-links">
                         <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+91XXXXXXXXXX">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/91XXXXXXXXXX" target="_blank">💬 WhatsApp</a>
+                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
                         <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
